--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lite-server": "2.4.0"
   },
   "dependencies": {
+    "dotenv": "^9.0.2",
     "openzeppelin-solidity": "^2.2.0",
     "solc": "^0.5.2",
     "solc-js": "^0.5.2",
