--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-MNEMONIC=breeze venue casual detail gain sun convince opera demand north much shoot
-INFURA_KEY=1828e5f35fcd4f36b0c1137ba0a77536
+MNEMONIC=miracle harvest fabric actor crisp recipe twenty sister private client range pen
+INFURA_KEY=a5afc555d6844d64aebe1647f37580f8
 ALCHEMY_KEY=
-FACTORY_CONTRACT_ADDRESS=0x17f5E9628200500B9211D5C0AA20819Afa1f66B0
+FACTORY_CONTRACT_ADDRESS=0xB933C9184DE7b968197559e511a5C44AA90A28Bf
 NETWORK=rinkeby
-OWNER_ADDRESS=0x41D2Cc9C670f42a1567780BD54f392B58Fde633F
+OWNER_ADDRESS=0xD3453B04d05dfEBe2C9Db78f0f5aa1df26A03547
